--- a/views/partials/charsheet-header.handlebars
+++ b/views/partials/charsheet-header.handlebars
@@ -18,7 +18,7 @@
         </li>
         <li>
           <label for="race">Race</label>
-          <input type='text' value="{{race}}" name="race" placeholder="Human" />
+          <input type='text' value="{{race}} ({{subrace}})" name="race" placeholder="Human" />
         </li>
         <li>
           <label for="alignment">Alignment</label>
