working on a test sheet for saving data

--- a/views/partials/charsheet-header.handlebars
+++ b/views/partials/charsheet-header.handlebars
@@ -1,4 +1,4 @@
-<section class="charname">
+<section class="charname" id="charheader">
       <label for="charname">Character Name</label>
       <input type='text' value="{{character_name}}" name="charname" placeholder="Jane Doe"/>
     </section>
@@ -6,7 +6,7 @@
       <ul>
         <li>
           <label for="classlevel">Class Level</label>
-          <input type='text' value="{{level}}" name="classlevel" placeholder="1" />
+          <input type='text' value="{{class}} {{level}}" name="classlevel" placeholder="1" />
         </li>
         <li>
           <label for="background">Background</label>
