--- a/views/character-sheet-test.handlebars
+++ b/views/character-sheet-test.handlebars
@@ -270,10 +270,23 @@
   </main>
 </form>
 
+
+<div class="container-title">
+  <div class="row">
+    <div class="col-12">
+      <div id="submitbutton">
+        <h1 class="text-warning" id="header-welcome">WELCOME</h1>
+            <button type="button" id="charsubmitbtn" onclick="javascript:submitCharacter()" src="../images/charbutton.png" name="create-character" class="charbtnSubmit" id="character-submit"/> </a>
+        </div>
+    </div>
+  </div>
+</div>
+     
+    
 {{!-- Ability to edit char sheet manually --}}
 {{#if loggedIn}}
 <script src="./js/logout.js"></script>
 {{/if}}
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="../js/character-sheet.js"></script>
 <script src="../js/character-submit.js"></script>
+
