Added handlebars for viewing user characters. Added code to view API choices.

--- a/views/partials/charsheet-header.handlebars
+++ b/views/partials/charsheet-header.handlebars
@@ -6,7 +6,7 @@
       <ul>
         <li>
           <label for="classlevel">Class Level</label>
-          <input type='text' value="{{level}}" name="classlevel" placeholder="1" />
+          <input type='text' value="1" name="classlevel" placeholder="1" />
         </li>
         <li>
           <label for="background">Background</label>
