--- a/views/character-creator.handlebars
+++ b/views/character-creator.handlebars
@@ -28,7 +28,7 @@
         <!-- Race selection -->
         <div>
             <label for="char-race">Race: </label>
-            <select id="char-race" name="char-race" required onchange="getClass(this)">
+            <select id="char-race" name="char-race" required onchange="getRace(this)">
                 <option hidden></option>
                 <option value="dragonborn">Dragonborn</option>
                 <option value="dwarf">Dwarf</option>
