--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -14,7 +14,7 @@
         {{else}}
         
 
-        <img src="/images/welcomescreen.png" alt="" id="welcome-screen-words">
+        <img src="./images/welcomescreen.png" alt="" id="welcome-screen-words">
         {{/if}}
        </div>
     </div>
