--- a/views/character-creator.handlebars
+++ b/views/character-creator.handlebars
@@ -1,34 +1,11 @@
-
-
-</div>
 <div class="character-creator">
     <form id="character-form">
         <h1>Character Creator</h1>
 
-         <!-- Name input-->
-        <div>
-            <label for="char-name">Character Name: </label>
-            <input type="text" id="char-name" name="char-name" required>
-        </div>
-
-          <!-- Age selection -->
-        <div>
-            <label for="char-age">Age: </label>
-            <input type="number" id="char-age" name="char-age" required>
-        </div>
-
-        <!-- Character level -->
-        <div>
-            <label for="char-level">Character level: </label>
-            <input type="number" id="char-level" name="char-level" min="1" max="20" required>
-
-        </div>
-
-
         <!-- Race selection -->
         <div>
             <label for="char-race">Race: </label>
-            <select id="char-race" name="char-race" required onchange="getRace(this)">
+            <select id="char-race" name="char-race" required>
                 <option hidden></option>
                 <option value="dragonborn">Dragonborn</option>
                 <option value="dwarf">Dwarf</option>
@@ -42,50 +19,10 @@
             </select>
         </div>
 
-         <!-- Background selection -->
-        <div>
-            <label for="char-background">Background: </label>
-            <select id="char-race" name="char-race" required>
-                <option hidden></option>
-                <option value="Acolyte">Acolyte</option>
-                
-            </select>
-        </div>
-
-         <!-- Ability selection -->
-
-         <div>
-            <label for="char-strength">Ability Score: Strength: </label>
-            <input type="number" id="char-strength" name="char-strength" required>
-        </div>
-
-         <div>
-            <label for="char-dexterity">Ability Score: Dexterity: </label>
-            <input type="number" id="char-dex" name="char-dex" required>
-        </div>
-
-         <div>
-            <label for="char-constitution">Ability Score: Constitution: </label>
-            <input type="number" id="char-const" name="char-const" required>
-        </div>
-         <div>
-            <label for="char-intelligence">Ability Score: Intelligence </label>
-            <input type="number" id="char-int" name="char-int" required>
-        </div>
-       
-         <div>
-            <label for="char-wisdom">Ability Score: Wisdom: </label>
-            <input type="number" id="char-wis" name="char-wis" required>
-        </div>
-         <div>
-            <label for="char-charisma">Ability Score: Charisma: </label>
-            <input type="number" id="char-charisma" name="char-charisma" required>
-        </div>
-
         <!-- Class selection -->
         <div>
             <label for="char-class">Classes: </label>
-            <select id="char-class" name="char-class" required onchange="getClass(this)">
+            <select id="char-class" name="char-class" required>
                 <option hidden></option>
                 <option value="barbarian">Barbarian</option>
                 <option value="bard">Bard</option>
@@ -101,25 +38,11 @@
                 <option value="wizard">Wizard</option>
         </div>
         </select>
-                <div>
-            <label for="char-proficiencies">Proficiencies: </label>
-            <select  id="char-proficiencies" name="char-proficiencies" required>
-                <option hidden ></option>
-            </select>
-        </div>
 
+        <!-- Name input-->
         <div>
-            <label for="char-skills">Skills: </label>
-            <select  id="char-skills" name="char-skills" required>
-                <option hidden ></option>
-            </select>
-        </div>
-
-        <div>
-            <label for="char-traits">Traits: </label>
-            <select  id="char-traits" name="char-traits" required>
-                <option hidden ></option>
-            </select>
+            <label for="char-name">Character Name: </label>
+            <input type="text" id="char-name" name="char-name" required>
         </div>
 
         <!-- Gender selection -->
@@ -132,13 +55,24 @@
                 <option value="other">Other</option>
             </select>
         </div>
+
+        <!-- Age selection -->
         <div>
-            <button class= "create-submit" type="submit">Create your character</button>
+            <label for="char-age">Age: </label>
+            <input type="number" id="char-age" name="char-age" required>
+        </div>
+
+        <!-- Character level -->
+        <div>
+            <label for="char-level">Character level: </label>
+            <input type="number" id="char-level" name="char-level" min="1" max="20" required>
+
+        </div>
+
+        <div>
+            <button type="submit">Create your character</button>
         </div>
     </form>
 </div>
-{{#if loggedIn}}
-<script src="./js/logout.js"></script>
-{{/if}}
-<script src="../public/js/character-creator.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+<script src="javascript/character-creator.js"></script>
