--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -34,4 +34,4 @@
     <button type="submit" class="btn btn-warning" id="btn-login">Login</button>
   </div>
 </form>
-<script src="/js/login.js"></script>
+<script src="./javascript/login.js"></script>
