--- a/views/character-creator.handlebars
+++ b/views/character-creator.handlebars
@@ -1,20 +1,17 @@
-
-
-</div>
-<div class="character-creator">
-    <form id="character-creator1">
+<form action="/characters/add" method="POST" id="character-creator" class="character-creator">
+    <div >
         <h1>Character Creator</h1>
 
          <!-- Name input-->
         <div class="form1">
             <label for="char-name">Character Name: </label>
-            <input type="text" id="char-name" name="character-name" required>
+            <input type="text" id="char-name" name="character_name" required>
         </div>
 <div class="agegen form1">
           <!-- Age selection -->
         <div>
             <label for="char-age">Age: </label>
-            <input type="number" id="char-age" name="age" required>
+            <input type="number" id="char_age" name="age" required>
         </div>
         <!-- Gender selection -->
         <div>
@@ -27,10 +24,10 @@
             </select>
         </div>
         </div>
-        {{!-- <div class="form1">
+        <div class="form1">
 
         <!-- Character level -->
-        <div>
+        {{!-- <div>
             <label for="char-level">Character level: </label>
             <input type="number" id="char-level" name="char-level" min="1" max="20" required>
 
@@ -56,7 +53,7 @@
 <!-- Class selection -->
         <div class="form1">
             <label for="char-class">Classes: </label>
-            <select id="char-class" name="class" required>
+            <select id="char-class" name="char_class" required>
                 <option hidden></option>
                 <option value="barbarian">Barbarian</option>
                 <option value="bard">Bard</option>
@@ -87,38 +84,38 @@
         <div class="scores form1">
          <div>
             <label for="char-strength">Ability Score: Strength: </label>
-            <input type="number" id="char-str" name="char-strength" required>
+            <input type="number" id="char-str" name="str" required>
         </div>
 
          <div>
             <label for="char-dexterity">Ability Score: Dexterity: </label>
-            <input type="number" id="char-dex" name="char-dex" required>
+            <input type="number" id="char-dex" name="dex" required>
         </div>
 
          <div>
             <label for="char-constitution">Ability Score: Constitution: </label>
-            <input type="number" id="char-con" name="char-const" required>
+            <input type="number" id="char-con" name="con" required>
         </div>
          <div>
             <label for="char-intelligence">Ability Score: Intelligence </label>
-            <input type="number" id="char-int" name="char-int" required>
+            <input type="number" id="char-int" name="int" required>
         </div>
        
          <div>
             <label for="char-wisdom">Ability Score: Wisdom: </label>
-            <input type="number" id="char-wis" name="char-wis" required>
+            <input type="number" id="char-wis" name="wis" required>
         </div>
          <div>
             <label for="char-charisma">Ability Score: Charisma: </label>
-            <input type="number" id="char-cha" name="char-charisma" required>
+            <input type="number" id="char-cha" name="cha" required>
         </div>
         </div>
         
-            <button type="submit" id="submitbtn" class= "form1 create-submit" >Create your character</button>
+            <button type="submit" id="submitbtn" href="/characters/add" class= "form1 create-submit" >Create your character</button>
         </div>
-    </form>
-</div>
-{{#if loggedIn}}
+    </div>
+</form>
+{{!-- {{#if loggedIn}}
 <script src="./js/logout.js"></script>
-{{/if}}
-<script src="./js/character-creator.js"></script>
+{{/if}} --}}
+<script src="./js/submit.js"></script>
