more work on fetch

--- a/views/character-creator.handlebars
+++ b/views/character-creator.handlebars
@@ -75,7 +75,7 @@
             <label for="char-background">Background: </label>
             <select id="char-background" name="background" required>
                 <option hidden></option>
-                <option value="Acolyte">Acolyte</option>
+                <option value="acolyte">Acolyte</option>
                 
             </select>
         </div>
