Signup now logs users to database. Login and signup fixed. Added session data for character creator

--- a/views/character-creator.handlebars
+++ b/views/character-creator.handlebars
@@ -118,4 +118,4 @@
 {{!-- {{#if loggedIn}}
 <script src="./js/logout.js"></script>
 {{/if}} --}}
-<script src="./js/submit.js"></script>
+{{!-- <script src="./js/submit.js"></script> --}}
