trying to fix main

--- a/views/partials/character-card-details.handlebars
+++ b/views/partials/character-card-details.handlebars
@@ -36,6 +36,8 @@
                 <span class="class">{{class}}</span>
             </div>
             {{!-- IMAGE EVENTUALLY--}}
+                            {{!-- <img class="hero-img" src="../{{image_link}}" alt="{{name}}"> --}}
+
             <div>
                 <img class="character-img" src="../{{image_link}}" alt="{{name}}">
             </div>    
