--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -5,14 +5,13 @@
         <h1 class="text-warning" id="header-welcome">WELCOME</h1>
         {{#if loggedIn}}
 
-          <a href="./character/add">
+          <a href="/characters/add">
             <input
               type="image"
               src="./images/charbutton.png"
               name="create-character"
               class="charbtnSubmit"
               id="character-creator"
-              href="/character-creator"
             />
           </a>
           <a href="./character-sheet">
@@ -22,7 +21,6 @@
               name="sheet-character"
               class="sheetbtnSubmit"
               id="sheet-creator"
-              href="/character-sheet"
             />
           </a>
 
