Character creator display finished.

--- a/views/character-creator.handlebars
+++ b/views/character-creator.handlebars
@@ -111,7 +111,7 @@
         </div>
         </div>
         
-            <button type="submit" id="submitbtn" href="/characters/add" class= "form1 create-submit" >Create your character</button>
+            <button type="submit" id="submitbtn" href="/characters/add" class= "form1 create-submit" >Continue</button>
         </div>
     </div>
 </form>
