--- a/views/partials/charsheet-header.handlebars
+++ b/views/partials/charsheet-header.handlebars
@@ -1,32 +1,62 @@
 <section class="charname">
-      <label for="charname">Character Name</label>
-      <input type='text' value="{{character_name}}" name="charname" placeholder="Jane Doe"/>
-    </section>
-    <section class="misc">
-      <ul>
-        <li>
-          <label for="classlevel">Class Level</label>
-          <input type='text' value="1" name="classlevel" placeholder="1" />
-        </li>
-        <li>
-          <label for="background">Background</label>
-          <input type='text' value="{{background}}" name="background" placeholder="Char background" />
-        </li>
-        <li>
-          <label for="playername">Player Name</label>
-          <input type='text' value="{{player_name}}" name="playername" placeholder="Your Name Here" />
-        </li>
-        <li>
-          <label for="race">Race</label>
-          <input type='text' value="{{race}}" name="race" placeholder="Human" />
-        </li>
-        <li>
-          <label for="alignment">Alignment</label>
-          <input type='text' value="{{alignment}}" name="alignment" placeholder="Lawful Good" />
-        </li>
-        <li>
-          <label for="experiencepoints">Experience Points</label>
-          <input type='text' value="{{exp}}" name="experiencepoints" placeholder="0" />
-        </li>
-      </ul>
-    </section>
+  <label for="charname">Character Name</label>
+  <input
+    type="text"
+    value="{{character_name}}"
+    name="charname"
+    placeholder="Jane Doe"
+  />
+</section>
+<section class="misc">
+  <ul>
+    <li>
+      <label for="classlevel">Class Level</label>
+      <input
+        type="text"
+        value="{{char_class}} {{level}}"
+        name="classlevel"
+        placeholder="1"
+      />
+    </li>
+    <li>
+      <label for="background">Background</label>
+      <input
+        type="text"
+        value="{{background}}"
+        name="background"
+        placeholder="Char background"
+      />
+    </li>
+    <li>
+      <label for="playername">Player Name</label>
+      <input
+        type="text"
+        value="{{player_name}}"
+        name="playername"
+        placeholder="Your Name Here"
+      />
+    </li>
+    <li>
+      <label for="race">Race</label>
+      <input type="text" value="{{race}}" name="race" placeholder="Human" />
+    </li>
+    <li>
+      <label for="alignment">Alignment</label>
+      <input
+        type="text"
+        value="{{alignment}}"
+        name="alignment"
+        placeholder="Lawful Good"
+      />
+    </li>
+    <li>
+      <label for="experiencepoints">Experience Points</label>
+      <input
+        type="text"
+        value="{{exp}}"
+        name="experiencepoints"
+        placeholder="0"
+      />
+    </li>
+  </ul>
+</section>
