login, logout fixed and profile added

--- a/views/character-creator.handlebars
+++ b/views/character-creator.handlebars
@@ -1,4 +1,4 @@
-<form action="/characters/add" method="POST" id="character-creator" class="character-creator">
+<form action="/api/characters/add" method="POST" id="character-creator" class="character-creator">
     <div >
         <h1>Character Creator</h1>
 
@@ -111,7 +111,7 @@
         </div>
         </div>
         
-            <button type="submit" id="submitbtn" href="/characters/add" class= "form1 create-submit" >Continue</button>
+            <button id="submitbtn" href="/api/characters/add" class= "form1 create-submit" >Continue</button>
         </div>
     </div>
 </form>
