--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,6 +1,4 @@
 <form
-  action="/user/login"
-  method="POST"
   class="form-horizontal"
   id="form-login"
 >
@@ -40,11 +38,10 @@
   <div>
     <button
       type="submit"
-      href="/user/login"
       class="btn btn-warning"
       id="btn-login"
     >Login</button>
   </div>
 </form>
 
-{{! <script src="/js/login.js"></script> }}
+<script src="/js/login.js"></script>
