--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -1,9 +1,4 @@
-{{#each user}}
-  {{> profile-card}}
-{{/each}}
-{{!-- <section>
-  <div id="profile-header-container">
-    <h2 class="text-warning" id="profile-header">Your Characters</h2>
-  </div>
-</section> --}}
+<div class="container col-12 p-3">
+    <h1 class="text-white center col-12 text-align-center p-2">Coming Soon...</h1>
+</div>
 
