--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,10 +1,7 @@
 <form
-  action="/user/signup"
-  method="POST"
   class="form-horizontal"
   id="form-signup"
 >
-
   <div class="form-group">
     <label
       for="username-signup"
@@ -54,11 +51,9 @@
   <div>
     <button
       type="submit"
-      href="/user/signup"
       class="btn btn-warning"
       id="btn-signup"
     >Sign-up</button>
   </div>
 </form>
-
-{{! <script src="/js/signup.js"></script> }}
+<script src="/js/signup.js"></script>
