--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -22,7 +22,7 @@
         <a class="nav-link text-white" href="/">Home</a>
       </li>
        <li class="nav-item">
-        <a class="nav-link text-white"class="nav-link text-white btn btn-link" id="logout" href="/logout">Logout</a>
+        <a class="nav-link text-white"class="nav-link text-white btn btn-link" id="logout" href="/user/logout">Logout</a>
       </li>
       <li class="nav-item">
         <a class="nav-link text-white" href="/user/profile">Profile</a>
@@ -60,7 +60,7 @@
 
 
 {{#if loggedIn}}
-    {{!-- <script src="js/logout.js"></script> --}}
+ <script src="/js/logout.js"></script>
 {{/if}}
 <div></div>
 <div></div>
@@ -68,6 +68,5 @@
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-{{!-- <script src="./js/character-creator.js"></script> --}}
 </body>
 </html> 
